# robustchangedetection

./: .gitignore  Dockerfile  FINAL_STATUS.md  LICENSE  README.md  REORGANIZATION_COMPLETE.md  SETUP.md  START_HERE.md  SYSTEM_STATUS.md  demo_change_detection.py  main.py  manage.py  pyproject.toml  requirements.txt  stress_test_report.md  stress_test_results.md  test_basic_functionality.py  test_demo.py  test_functionality.py  test_pipeline.py  test_results.md  test_simple.py  verify_installation.py
alerts/: __init__.py  apps.py  tasks.py  urls.py  views.py
backend/: __init__.py  asgi.py  celery.py  settings.py  simple_settings.py  urls.py  urls_simple.py  wsgi.py
change_detection/: apps.py  models.py  serializers.py  views.py
changedetection/: __init__.py
changedetection/models/: __init__.py  advanced_models.py  model_interface.py  sota_models.py
changedetection/utils/: __init__.py
config/: .env.example  docker-compose.yml
core/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
data_processing/: apps.py  preprocessing.py  satellite_apis.py  views.py
ml_models/: local_models.py
scripts/: download_models.py  setup.py  train_model.py
src/: manage.py
src/changedetection/: __init__.py  cli.py
src/changedetection/alerts/: apps.py  tasks.py  views.py
src/changedetection/change_detection/: __init__.py  advanced_models.py  apps.py  explainability.py  ml_models.py  models.py  quality_metrics.py  simple_models.py  urls.py  views.py
src/changedetection/change_detection/migrations/: 0001_initial.py
src/changedetection/core/: __init__.py  admin.py  apps.py  serializers.py  simple_models.py  ui_enhancements.py  urls.py
src/changedetection/core/migrations/: 0001_initial.py
src/changedetection/data_processing/: __init__.py  advanced_cloud_masking.py  apps.py  automated_workflows.py  bhoonidhi_api.py  gis_outputs.py  satellite_apis.py  spectral_indices.py  temporal_analysis.py  urls.py  views.py
src/changedetection/ml_models/: local_models.py
src/templates/core/: base.html  index.html  time_series_dashboard.html
src/web/backend/: asgi.py  celery.py  settings.py  simple_settings.py  urls_simple.py  wsgi.py
templates/core/: dashboard.html  map.html
tests/: __init__.py  test_models.py
tests/fixtures/: sample_data.py
tests/integration/: test_full_pipeline.py
tests/unit/: __init__.py  test_spectral_indices.py  test_temporal_analysis.py
